[gd_scene load_steps=11 format=3 uid="uid://chledrc08mf0n"]

[ext_resource type="PackedScene" uid="uid://is0l27p3s4o" path="res://scenes/player/player_spawner.tscn" id="1_hw30t"]
[ext_resource type="Script" path="res://utility/movement_configurator.gd" id="1_ipp65"]
[ext_resource type="Shader" path="res://assets/shaders/platform.gdshader" id="1_peh5k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lxapw"]
bg_color = Color(0.380392, 0.380392, 0.380392, 1)

[sub_resource type="Theme" id="Theme_ij730"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/font_sizes/font_size = 24

[sub_resource type="GDScript" id="GDScript_1q2na"]
resource_name = "floor"
script/source = "extends Node2D

@export_range(0, 2000, 0.5, \"or_greater\") var gap_width: float = 400:
	get: return gap_width
	set(value):
		gap_width = value
		update_platforms()

@export_range(32, 320, 0.5, \"or_greater\") var platform_height: float = 48:
	get: return platform_height
	set(value): 
		platform_height = value
		update_platforms()

func _ready():
	get_tree().get_root().size_changed.connect(update_platforms)
	update_platforms()

# update platforms with new information (including viewport changes)
func update_platforms():
	var viewport_size: Vector2 = get_viewport_rect().size
	
	if ($left == null || $right == null): return
	position.x = viewport_size.x / 2
	
	# place sprites
	$left/sprite.scale = Vector2(viewport_size.x/2 - gap_width/2, platform_height)
	$right/sprite.scale = Vector2(viewport_size.x/2 - gap_width/2, platform_height)
	
	$left.position = Vector2(
		-viewport_size.x/2 + $left/sprite.scale.x/2,
		viewport_size.y - platform_height/2)
	$right.position = Vector2(
		viewport_size.x/2 - $right/sprite.scale.x/2,
		viewport_size.y - platform_height/2)
		
	# place collision boxes
	$left/collider.shape.size = $left/sprite.scale
	$right/collider.shape.size = $right/sprite.scale

func _adjust_gap_width(value):
	gap_width = value
	update_platforms()
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3ptks"]
shader = ExtResource("1_peh5k")

[sub_resource type="CanvasTexture" id="CanvasTexture_1yc25"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u3jlu"]
size = Vector2(376, 32)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_55wyp"]
shader = ExtResource("1_peh5k")

[node name="main" type="Node2D"]

[node name="gui" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="gui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="gui/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_lxapw")

[node name="MarginContainer" type="MarginContainer" parent="gui/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="configurator" type="VBoxContainer" parent="gui/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_ipp65")

[node name="gap_width" type="HBoxContainer" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/gap_width"]
layout_mode = 2
theme = SubResource("Theme_ij730")
text = "Gap Width"

[node name="HSlider" type="HSlider" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/gap_width"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
max_value = 2000.0
step = 0.5
value = 400.0

[node name="HSeparator" type="HSeparator" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator"]
layout_mode = 2

[node name="start_accel" type="HBoxContainer" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/start_accel"]
layout_mode = 2
theme = SubResource("Theme_ij730")
text = "Start Acceleration"

[node name="start_accel" type="HSlider" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/start_accel"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
min_value = 100.0
max_value = 1200.0
step = 0.5
value = 400.0

[node name="stop_accel" type="HBoxContainer" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/stop_accel"]
layout_mode = 2
theme = SubResource("Theme_ij730")
text = "Stop Acceleration"

[node name="stop_accel" type="HSlider" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/stop_accel"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
min_value = 100.0
max_value = 1200.0
step = 0.5
value = 400.0

[node name="max_speed" type="HBoxContainer" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/max_speed"]
layout_mode = 2
theme = SubResource("Theme_ij730")
text = "Max Speed"

[node name="max_speed" type="HSlider" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/max_speed"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
min_value = 100.0
max_value = 2000.0
step = 0.5
value = 1200.0

[node name="HSeparator2" type="HSeparator" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator"]
layout_mode = 2

[node name="jump_height" type="HBoxContainer" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/jump_height"]
layout_mode = 2
theme = SubResource("Theme_ij730")
text = "Jump Height"

[node name="jump_height" type="HSlider" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/jump_height"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
min_value = 4.0
max_value = 1000.0
step = 0.5
value = 96.0

[node name="first_half_grav" type="HBoxContainer" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/first_half_grav"]
layout_mode = 2
theme = SubResource("Theme_ij730")
text = "Jumping Gravity"

[node name="first_half_grav" type="HSlider" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/first_half_grav"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
min_value = 32.0
max_value = 2000.0
step = 0.5
value = 980.0

[node name="second_half_grav" type="HBoxContainer" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/second_half_grav"]
layout_mode = 2
theme = SubResource("Theme_ij730")
text = "Falling Gravity"

[node name="second_half_grav" type="HSlider" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/second_half_grav"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
min_value = 32.0
max_value = 2000.0
step = 0.5
value = 980.0

[node name="air_strafe_mult" type="HBoxContainer" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/air_strafe_mult"]
layout_mode = 2
theme = SubResource("Theme_ij730")
text = "Air Strafe Multiplier"

[node name="air_strafe_multiplier" type="HSlider" parent="gui/MarginContainer/PanelContainer/MarginContainer/configurator/air_strafe_mult"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
max_value = 1.0
step = 2.08165e-12
value = 0.2

[node name="floor" type="Node2D" parent="."]
position = Vector2(576, 2.08165e-12)
script = SubResource("GDScript_1q2na")

[node name="left" type="StaticBody2D" parent="floor"]
position = Vector2(-388, 632)

[node name="sprite" type="Sprite2D" parent="floor/left"]
material = SubResource("ShaderMaterial_3ptks")
scale = Vector2(376, 32)
texture = SubResource("CanvasTexture_1yc25")

[node name="collider" type="CollisionShape2D" parent="floor/left"]
shape = SubResource("RectangleShape2D_u3jlu")

[node name="right" type="StaticBody2D" parent="floor"]
position = Vector2(388, 632)

[node name="sprite" type="Sprite2D" parent="floor/right"]
material = SubResource("ShaderMaterial_55wyp")
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(376, 32)
texture = SubResource("CanvasTexture_1yc25")

[node name="collider" type="CollisionShape2D" parent="floor/right"]
shape = SubResource("RectangleShape2D_u3jlu")

[node name="player_spawner" parent="." instance=ExtResource("1_hw30t")]

[connection signal="value_changed" from="gui/MarginContainer/PanelContainer/MarginContainer/configurator/gap_width/HSlider" to="floor" method="_adjust_gap_width"]
[connection signal="value_changed" from="gui/MarginContainer/PanelContainer/MarginContainer/configurator/start_accel/start_accel" to="gui/MarginContainer/PanelContainer/MarginContainer/configurator" method="_on_start_accel_value_changed"]
[connection signal="value_changed" from="gui/MarginContainer/PanelContainer/MarginContainer/configurator/stop_accel/stop_accel" to="gui/MarginContainer/PanelContainer/MarginContainer/configurator" method="_on_stop_accel_value_changed"]
[connection signal="value_changed" from="gui/MarginContainer/PanelContainer/MarginContainer/configurator/max_speed/max_speed" to="gui/MarginContainer/PanelContainer/MarginContainer/configurator" method="_on_max_speed_value_changed"]
[connection signal="value_changed" from="gui/MarginContainer/PanelContainer/MarginContainer/configurator/jump_height/jump_height" to="gui/MarginContainer/PanelContainer/MarginContainer/configurator" method="_on_jump_height_value_changed"]
[connection signal="value_changed" from="gui/MarginContainer/PanelContainer/MarginContainer/configurator/first_half_grav/first_half_grav" to="gui/MarginContainer/PanelContainer/MarginContainer/configurator" method="_on_first_half_grav_value_changed"]
[connection signal="value_changed" from="gui/MarginContainer/PanelContainer/MarginContainer/configurator/second_half_grav/second_half_grav" to="gui/MarginContainer/PanelContainer/MarginContainer/configurator" method="_on_second_half_grav_value_changed"]
[connection signal="value_changed" from="gui/MarginContainer/PanelContainer/MarginContainer/configurator/air_strafe_mult/air_strafe_multiplier" to="gui/MarginContainer/PanelContainer/MarginContainer/configurator" method="_on_air_strafe_multiplier_value_changed"]
